# hackville1.17

./: .gitignore  Hackville 1.17  README.md  cultural_districts.json
backend/: .env.example  .gitignore  README.md  auth.py  config.py  database.py  main.py  models.py  pyproject.toml
backend/app/: config.py  database.py  dependencies.py  firebase.py  models.py  mongodb.py  schemas.py
backend/app/repositories/: auth_repository.py  user_profile_repository.py
backend/app/routers/: __init__.py  auth_router.py  suggestions_router.py  user_profile_router.py
backend/app/schemas/: __init__.py  auth.py  user_profile.py
backend/app/services/: auth_service.py  gemini_service.py  user_profile_service.py
backend/routers/: auth.py  conversations.py  family_members.py  patients.py  recognition.py
backend/services/: face_recognition.py  gemini_service.py  voice_recognition.py
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: App.tsx  Chatbot.css  Chatbot.tsx  CreateAccountPage.tsx  IntroPage.tsx  LoginPage.tsx  MapPage.tsx  SplitSelectionPage.tsx  UserPreferences.tsx  index.css  main.tsx
mobile/: .gitignore  App.js  app.json  package-lock.json  package.json
mobile/src/config/: index.example.js
mobile/src/context/: AuthContext.js
mobile/src/navigation/: AppNavigator.js
mobile/src/screens/auth/: FamilyRegistrationScreen.js  LoginScreen.js  PatientRegistrationScreen.js  RegisterScreen.js  RoleSelectionScreen.js
mobile/src/screens/family/: AddConversationScreen.js  FamilyHomeScreen.js  (+3 more)
mobile/src/services/: api.js  firebase.js
(+7 files in other folders)
