[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "email-validator>=2.0.0",
    "fastapi>=0.128.0",
    "firebase-admin>=7.1.0",
    "google-generativeai>=0.8.0",
    "httpx>=0.28.1",
    "motor>=3.0.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.40.0",
]
